--- a/index.html
+++ b/index.html
@@ -130,6 +130,16 @@
       </li>    
     /ul>
  </section>
+<!-- Assignment Section -->
+  <section>
+      <section class="assignment section">
+        <div class="container">
+          <h2>What are you waiting for? Join Blocbox today!</h2>
+          <p>Get started with your first 30 days free!</p>
+          <a href="signup.html" class="btn">Join Blocbox</a>
+        </div>
+      </section>
+
 </main>
 
  <!-- Footer -->
@@ -150,7 +160,7 @@
        <div class="right-footer-block one-third">
          <img class="logo" src="images/site-logo.png" alt="Blocbox" />
        </div>
-       
+
    </div>
  </footer>
 
