--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
   <title>Save, share and collaborate | Blocbox</title>
 
 <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Lato|Varela+Round" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Varela+Round" rel="stylesheet">
+<!-- CSS -->
+ <link rel="stylesheet" href="css/normalize.css">
+ <link rel="stylesheet" href="css/style.css">
+ <link rel="stylesheet" href="css/font-awesome.css">
+ <link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
+
   <header> 
     <nav class="container">
       <div class="one-half">
@@ -24,7 +30,7 @@
       </div>
     </nav>
     <div class="container hero">
-      <h1>Save, share and collaborate.</h1>
+      <h1 class="animated fadeIn">Save, share and collaborate.</h1>
       <p>blocbox lets you collect and sort infmormation. <br/>Create simple notes, store images, and add links.</p>
       <a href="signup.html" class="btn"> Start your Free Trial!</a>
       <img src="images/dashboard.png" alt="Blocbox" />
@@ -128,7 +134,7 @@
         <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
         <p class="name"><strong>Stella B.</strong><br/>Freelance Designer, N. Dakota</p>
       </li>    
-    /ul>
+    </ul>
  </section>
 <!-- Assignment Section -->
   <section>
