--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
       </li>
       </ul>
        <div class="container">
-   <p class="small">*We will not collect your credit card information until your 30-day trial has ended.</p>
- </div>
+          <p class="small"> *We will not collect your credit card information until your 30-day trial has ended.</p>
+        </div>
     </section>
 
     <!-- Testimonials -->
@@ -123,10 +123,12 @@
         <p class="name"><strong>Stella B.</strong><br/>Freelance Designer, N. Dakota</p>
       </li> 
       <li class="one-fourth">
+      <div class="stagger">
         <blockquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."
         </blockquote>
         <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
         <p class="name"><strong>Stella B.</strong><br/>Freelance Designer, N. Dakota</p>
+        <div>
       </li>
       <li class="one-fourth">
         <blockquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."
@@ -135,22 +137,15 @@
         <p class="name"><strong>Stella B.</strong><br/>Freelance Designer, N. Dakota</p>
       </li>
       <li class="one-fourth">
+      <div class="stagger">
         <blockquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."
         </blockquote>
         <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
         <p class="name"><strong>Stella B.</strong><br/>Freelance Designer, N. Dakota</p>
+        </div>
       </li>    
     </ul>
  </section>
-<!-- Assignment Section -->
-  <section>
-      <section class="assignment section">
-        <div class="container">
-          <h2>What are you waiting for? Join Blocbox today!</h2>
-          <p>Get started with your first 30 days free!</p>
-          <a href="signup.html" class="btn">Join Blocbox</a>
-        </div>
-      </section>
 
 </main>
 
