--- a/images.html
+++ b/images.html
@@ -5,7 +5,7 @@
 "IE=Edge">
 <meta name="viewport" content="width=device-width, intial-scale=1">
 <meta charset="UTF-8">
-  <title>Images | Blocbox</title>
+  <title> Dashboard | Blocbox</title>
 
 <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Lato|Varela+Round" rel="stylesheet">
@@ -14,8 +14,9 @@
  <link rel="stylesheet" href="css/style.css">
  <link rel="stylesheet" href="css/font-awesome.css">
  <link rel="stylesheet" href="css/animate.css">
+ <link rel="stylesheet" href="css/dropit.css">
 </head>
-<body class="Images">
+<body class="Dashboard">
 <!-- LEFT NAV -->
 <nav id="left-nav" class="left-nav">
   <a href="#" class="site-logo"><img src="images/site-logo.png"></a>
@@ -24,7 +25,7 @@
       <ul>
         <li><a href="#"><i class="fa fa-th-large"></i> All Items</a></li>
          <li><a href="#"><i class="fa fa-file-o"></i> Notes</a></li>
-         <li><a href="#"><i class="fa fa-picture-o"></i> Images</a></li>
+         <li class="activepage"><a href="#"><i class="fa fa-picture-o"></i> Images</a></li>
          <li><a href="#"><i class="fa fa-link"></i> Links</a></li>
       </ul>
       <p>Boxes</p>
@@ -45,17 +46,15 @@
   <section class="content">
   <div class="container">
     <div class="header">
-      <h1> All Items</h1>
+      <h1> Images</h1>
       <a href="#" class="btn">+ Add</a>
     </div>
   </div>
-  <div class="container">
     <div class="content-item">
       <div class="item-box">
       <img src="https://static.pexels.com/photos/6290/alcohol-party-glass-table-large.jpg">
       </div>
     </div>
-  </div>
   <div class="content-item">
          <div class="item-box">
             <img src="https://static.pexels.com/photos/131285/pexels-photo-131285-large.jpeg">
