--- a/dashboard.html
+++ b/dashboard.html
@@ -40,7 +40,16 @@
     <div class="settings">
       <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg">
       <p>Kalyn Charest</p>
-      <a href="#"><i class="fa fa-cog"></i></a>
+      <ul class="menu">
+            <li>
+             <a href="#"><i class="fa fa-cog"></i></a>
+             <ul>
+                  <li><a href="#"><i class="fa fa-cog"></i> Account Settings</a></li>
+                  <li><a href="#"><i class="fa fa-group"></i> Collaborators</a></li>
+                  <li><a href="#"><i class="fa fa-sign-out"></i> Sign Out</a></li>
+              </ul>
+            </li>
+          </ul>
     </div>
   </nav>
 <main role="main">
@@ -126,7 +135,7 @@
    <script type="text/javascript">
      $(".menu").dropit();
           $( "#menu" ).click(function() {
-         $("#left-nav").toggleClass("open", 200);
+          $("#left-nav").toggleClass("open", 200);
      });
    </script>
 </body>
