--- a/dashboard.html
+++ b/dashboard.html
@@ -40,7 +40,7 @@
     <div class="settings">
       <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg">
       <p>Kalyn Charest</p>
-      <ul class="menu">
+      <ul class="account">
             <li>
              <a href="#"><i class="fa fa-cog"></i></a>
              <ul>
@@ -134,6 +134,7 @@
    <script src="js/dropit.js"></script>
    <script type="text/javascript">
      $(".menu").dropit();
+     $(".account").dropit();
           $( "#menu" ).click(function() {
           $("#left-nav").toggleClass("open", 200);
      });
