--- a/dashboard.html
+++ b/dashboard.html
@@ -40,7 +40,7 @@
     <div class="settings">
       <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg">
       <p>Kalyn Charest</p>
-      <ul class="account">
+      <ul class="settings-btn dropit-inverse">
             <li>
              <a href="#"><i class="fa fa-cog"></i></a>
              <ul>
@@ -58,7 +58,7 @@
   <div class="container">
     <div class="header">
       <h1> All Items</h1>
-      <ul class="menu">
+      <ul class="dropdown-btn">
             <li>
               <a href="#" class="btn">+ Add</a>
               <ul>
@@ -133,10 +133,10 @@
   <script src="js/jquery-3.1.1.slim.min.js"></script>
    <script src="js/dropit.js"></script>
    <script type="text/javascript">
-     $(".menu").dropit();
-     $(".account").dropit();
+     $(".dropdown-btn").dropit();
+     $(".settings-btn").dropit();
           $( "#menu" ).click(function() {
-          $("#left-nav").toggleClass("open", 200);
+            $("#left-nav").toggleClass("open", 200);
      });
    </script>
 </body>
